# MaaIntelligentAssistant

./: .dockerignore  .env.example  .gitignore  .gitmodules  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  Cargo.toml  Dockerfile  FFI_ENHANCEMENT_SUMMARY.md  README.md  build.rs  docker-compose.yml  ffi_enhancement_examples.rs  setup_maa_env.sh  test-sse-fix.html  test_maa_integration.sh
.claude/: CLAUDE.md  development-workflow.md  technical-stack.md
.claude/maa-research/: parallel-agents.md  research-plan.md
config/: app.toml  devices.toml
deprecated/: advanced_automation.rs  core_game_old.rs  handler.rs  maa-intelligent-server.rs  queue_client.rs  support_features.rs  system_features.rs  task_classification.rs  worker_factory.rs
docs/: API.md  CONFIGURATION.md  DEVELOPMENT.md  FRONTEND_SCREENSHOT_HANDLING.md  INSTALLATION.md  MAA_SYSTEM_PROMPT.md  QWEN_FUNCTION_CALLING_DEMO.md  completed-tools.md  enhanced-tools-status.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/maa-knowledge/: DISCOVERIES.md  PROGRESS.md  README.md
docs/maa-knowledge/examples/: local-paths.md  maa-cli-commands.md
docs/maa-knowledge/features/: combat.md  copilot.md  credit.md  infrastructure.md  integrated-strategy.md  reclamation-algorithm.md  recruit.md  rewards.md  startup.md
docs/maa-knowledge/implementation/: ffi-integration.md  function-calling-tools.md  progress-report-startup.md
docs/maa-knowledge/protocols/: callback-schema.md  integration.md  task-schema.md
docs/maa-research/: BATTLE_STRATEGY.md  FFI_INTEGRATION.md  IMAGE_RECOGNITION.md  INFRAST_SCHEDULING.md  TASK_SYSTEM.md
docs/modules/: AI_CLIENT.md  AI_CLIENT_DELIVERY.md  COPILOT_MATCHER_DELIVERY.md  FUNCTION_TOOLS.md  MAA_ADAPTER_DELIVERY.md  MAA_CORE.md  MAA_OFFICIAL_BINDING_DELIVERY.md  MCP_GATEWAY_DELIVERY.md  MCP_TOOLS_DELIVERY.md  OPERATOR_MANAGER_DELIVERY.md  README.md
examples/: function_calling_demo.rs  qwen_function_calling_test.rs  qwen_http_test.rs
maa-chat-ui/: README.md  index.html  main.jsx  package.json  sse-debug.html  sse-test.html
scripts/: README.md  auto-research.sh  clean-claude-references.sh  clean-git-history.sh  deploy-local.sh  deploy-prod.sh  dev.sh  docker-build-real.sh  docker-build.sh  docker-entrypoint.sh  launch-agents.sh  setup-env.sh  start-all.sh  start-parallel-research.sh  stop-parallel-research.sh
src/: config.rs  function_calling_server.rs  lib.rs  main.rs
src/ai_client/: client.rs  config.rs  mod.rs  provider.rs  tests.rs
src/config/: mod.rs
src/copilot_matcher/: api_client.rs  cache.rs  matcher.rs  mod.rs  types.rs
src/function_tools/: advanced_automation.rs  context.rs  core_game.rs  handler_v2.rs  mod.rs  queue_client.rs  server.rs  support_features.rs  system_features.rs  types.rs
src/legacy/: maa_command.rs  maa_operators.rs  mod.rs  rmcp_tools.rs
src/legacy/mcp_gateway/: formats.rs  server.rs
src/maa_adapter/: README.md  backend.rs  callbacks.rs  core.rs  errors.rs  ffi_bindings.rs  ffi_real.rs  ffi_stub.rs  ffi_wrapper.rs  integration_test.rs  maa_official_bridge.rs  mod.rs  types.rs
src/maa_core/: basic_ops.rs  mod.rs  screenshot.rs  task_classification_v2.rs  task_notification.rs  task_queue.rs  task_queue_v2.rs  task_status.rs  worker.rs  worker_v2.rs
src/mcp_gateway/: handlers.rs  mod.rs
src/mcp_tools/: atomic_function_server.rs  enhanced_tools.rs  function_calling.rs  integration_tests.rs  maa_atomic_operations.rs  maa_combat.rs  maa_combat_official.rs  maa_copilot.rs  maa_copilot_enhanced.rs  maa_custom_tasks.rs  maa_infrastructure.rs  maa_other_tools.rs  maa_recruit.rs  maa_roguelike.rs  maa_startup.rs  maa_startup_official.rs  maa_status.rs  mod.rs  rmcp_server.rs
src/operator_manager/: cache.rs  errors.rs  mod.rs  scanner.rs  types.rs
src/sse/: mod.rs
tests/: integration_test_ffi.rs  maa_backend_test.rs  real_maa_test.rs  simple_backend_test.rs
