[package]
name = "maa-intelligent-server"
version = "0.1.0"
edition = "2021"
authors = ["MAA Team"]
description = "智能 MAA 控制中间层 - MCP 协议转换器"

[dependencies]
# MAA 官方 FFI 绑定 - 使用 maa-cli 项目中的 maa-sys
maa-sys = { path = "maa-cli/crates/maa-sys", features = ["runtime"] }
maa-types = { path = "maa-cli/crates/maa-types", features = ["serde"] }

# 动态链接依赖 (仅在真实集成时使用)
[target.'cfg(target_os = "macos")'.dependencies]
libloading = { version = "0.8", optional = true }

# MCP 官方 SDK (重新尝试正确使用)
rmcp = { version = "0.5.0", features = ["server", "macros"] }

# Web 服务器 (更新到最新版本)
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }

# 序列化和配置 (更新到最新版本)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
base64 = "0.21"
dotenvy = "0.15"
toml = "0.8"

# 简单缓存
sled = "0.34"

# AI 客户端 - 使用 async-openai 作为底层实现
async-openai = "0.27"
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 异步工具
async-trait = "0.1"
futures = "0.3"
tokio-util = "0.7"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 现代单例模式
once_cell = "1.19"

# 正则表达式
regex = "1.0"

# JSON Schema 支持 - 暂时移除
# schemars = { version = "0.8", features = ["chrono"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "maa-server"
path = "src/bin/maa-server-singleton.rs"

[lib]
name = "maa_intelligent_server"
path = "src/lib.rs"

[features]
default = ["server"]
server = []
with-maa-core = ["maa-sys/runtime"]
stub-mode = []